fix photo z-index

--- a/templates/default/controllers/photos/styles.css
+++ b/templates/default/controllers/photos/styles.css
@@ -660,7 +660,7 @@ span.album_user img {
     cursor: pointer;
 }
 #photo_container:hover #fullscreen_photo {
-    z-index: 1;
+    z-index: 2;
     opacity: 1;
 }
 #fullscreen_photo > div {
